test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/match-clusterscoped-resource/02-nameConstraint.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- nameConstraint.yaml
assert:
- nameConstraint.yaml
