test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/match-clusterscoped-resource/04-ns.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: ns.yaml
  shouldFail: true
