test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/match-clusterscoped-resource/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: nameconstraints.rules.example.com
spec:
  group: rules.example.com
  names:
    kind: NameConstraint
    plural: nameconstraints
  scope: Namespaced
  versions:
    - name: v1
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            apiVersion:
              type: string
            kind:
              type: string
            metadata:
              type: object
            name:
              type: string
