test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/match-clusterscoped-resource/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: nameconstraints.rules.example.com
status:
  acceptedNames:
    kind: NameConstraint
    plural: nameconstraints
  storedVersions:
  - v1
